<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hospital_list">LocationListActivity</string>
    <string name="title_activity_insert_hostpital_info">InsertLocationInfoActivity</string>
    <string name="title_activity_single_hospital_view">SingleLocationViewActivity</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="name">Location Name</string>
    <string name="address">Location Address</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longitude</string>
    <string name="description">Description</string>
    <string name="Insert">Insert</string>
    <string name="hospitalName">Location Name</string>
    <string name="hospitallAddress">Location Address</string>
    <string name="hosdescription">Description</string>
    <string name="top">Location Lists</string>
    <string name="takaaphoto">Take A Photo</string>
    <string name="Captureaphoto">Capture A Photo</string>
    <string name="logitude">Location Longitude</string>
    <string name="LogitudeI">Longitude</string>
    <string name="name1">Name</string>
    <string name="name2">Name</string>
    <string name="address1">Addres</string>
    <string name="image">Image</string>
    <string name="des">Details</string>
    <string name="destas">Details</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="register">Register</string>
    <string name="retrieve">Retrieve</string>
    <string name="descriptions">Description</string>
    <string name="desc">Description</string>
    <string name="distan">Distance</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

</resources>
