<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:fillViewport="true" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvHospitalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:padding="5dp"
            android:text="@string/top"
            
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:text="@string/name1" />

        <TextView
            android:id="@+id/viewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:text="@string/address1" />

        <TextView
            android:id="@+id/viewAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
         android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/viewLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
         android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:text="@string/LogitudeI" />

        <TextView
            android:id="@+id/viewLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10" />
    </LinearLayout>

    

   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/destas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/viewServiceDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_margin="20dp"
        android:orientation="vertical" >

        <TextView
            
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="left"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:text="@string/image" />

        <ImageView
            android:id="@+id/imageViewDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
          />
        
    </LinearLayout>
    

    
</LinearLayout>
</ScrollView>